# TextAdventureGlitch

./: CMakeLists.txt  README.md  commandparser.cpp  commandparser.h  main.cpp  textadventuregame.cpp  textadventuregame.h  textadventuregame.ui
textadventureglitch_unittest/: CMakeLists.txt  tst_testcase1.cpp
